--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
     "popper.js": "1.14.3",
-    "hammerjs": "^2.0.8"
+    "hammerjs": "^2.0.8",
+    "angular-cli-ghpages": "0.5.2"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.0",
